# ailabel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLISH.md  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: python-package.yml
ailabel/: __init__.py  __main__.py  predictions.py  server_main.py
ailabel/cli/: categorize_cli.py
ailabel/db/: crud.py  database.py  models.py
ailabel/entrypoints/: cli.py
ailabel/lib/: llms.py  notifications.py
ailabel/routers/: base.py
ailabel/static/css/: styles.css  tailwind.css
ailabel/templates/: base.html  index.html
docs/: gemini.md  ntfy.sh.md
tests/: conftest.py
tests/cli/: test_categorize_cli.py
tests/db/: __init__.py  test_crud.py  test_database.py  test_models.py
tests/entrypoints/: __init__.py  test_cli.py
tests/lib/: __init__.py  test_llms.py
