[project]
name = "ailabel"
version = "0.1.0"
description = "A tool for creating and managing labeled datasets for AI training"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
label = "ailabel.cli.categorize_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py313"
line-length = 100
