[project]
name = "ailabel"
version = "0.4.1"
description = "A tool for creating and managing labeled datasets for AI training"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AILabel Contributors"}
]
keywords = ["ai", "machine-learning", "labeling", "datasets", "classification"]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/thornewolf/ailabel"
"Bug Tracker" = "https://github.com/thornewolf/ailabel/issues"

[project.scripts]
label = "ailabel.entrypoints.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]
